<resources>
    <string name="app_name">Modul8_navigation_drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ASEP HARYANA SAPUTRA</string>
    <string name="nav_header_subtitle">20230810043@uniku.ac.id</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_mail">Mail</string>
    <string name="menu_inbox">Inbox</string>
    <string name="menu_unread">Unread</string>
    <string name="menu_send">Send</string>
    <string name="menu_draft">Draft</string>
</resources>